--- a/css/Evenements.less
+++ b/css/Evenements.less
@@ -68,6 +68,7 @@ body,
         color: #8b4828;
         background: transparent none repeat scroll left top;
     }
+    li:hover > a,
     li:focus > a {
         border: 0 none #000000;
         text-decoration: none;
