Less teminer sur evenement et modif icon social

--- a/css/Evenements.less
+++ b/css/Evenements.less
@@ -129,15 +129,19 @@ body,
     width: 32px;
     height: 32px;
 }
-#image_instagram {
+.icone_social {
     display: block;
-    z-index: 180;
-    top: 27px;
-    left: 900px;
+    top: 27px;    
     width: 32px;
     height: 32px;
     min-height: 32px;
     min-width: 32px;
+}
+#image_instagram {
+    .icone_social; 
+    z-index: 180;
+    left: 900px;
+   
 }
 
 #image_instagram  {
@@ -145,51 +149,28 @@ body,
 }
 
 #image_facebook {
-    display: block;
+    .icone_social;
     z-index: 181;
-    top: 27px;
     left: 850px;
-    width: 32px;
-    height: 32px;
-    min-height: 32px;
-    min-width: 32px;
+    
 }
 
 #image_facebook  {
     .image;
 }
-
-#nom_footer {
-    display: block;
+#image_facebook  {
+    .icone_social;
     z-index: 182;
-    top: 10px;
-    left: 50px;
-    width: 530px;
-    height: 30px;
-    min-height: 30px;
-    min-width: 530px;
+    left: 50px; 
+    
 }
 
-#zyro {
-    display: block;
-    z-index: 183;
-    top: 10px;
-    left: 670px;
-    width: 110px;
-    height: 24px;
-    min-height: 24px;
-    min-width: 110px;
-}
+
 
 #image_twiter {
-    display: block;
+    .icone_social;
     z-index: 184;
-    top: 27px;
     left: 950px;
-    width: 32px;
-    height: 32px;
-    min-height: 32px;
-    min-width: 32px;
 }
 
 #image_twiter  {
@@ -453,13 +434,8 @@ body,
     }
 
     #image_instagram {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 900px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_instagram  {
@@ -467,13 +443,8 @@ body,
     }
 
     #image_facebook {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 850px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_facebook  {
@@ -490,24 +461,11 @@ body,
         min-width: 530px;
     }
 
-    #zyro {
-        display: block;
-        top: 10px;
-        left: 670px;
-        width: 110px;
-        height: 24px;
-        min-height: 24px;
-        min-width: 110px;
-    }
+ 
 
     #image_twiter {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 950px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_twiter  {
@@ -750,13 +708,8 @@ body,
     }
 
     #image_instagram {
-        display: block;
+        .icone_social;
         top: 27px;
-        left: 900px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_instagram img {
@@ -768,13 +721,8 @@ body,
     }
 
     #image_facebook {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 850px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_facebook img {
@@ -795,24 +743,11 @@ body,
         min-width: 530px;
     }
 
-    #zyro {
-        display: block;
-        top: 10px;
-        left: 670px;
-        width: 110px;
-        height: 24px;
-        min-height: 24px;
-        min-width: 110px;
-    }
+   
 
     #image_twiter {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 950px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_twiter img {
@@ -1059,13 +994,8 @@ body,
     }
 
     #image_instagram {
-        display: block;
-        top: 27px;
+       .icone_social;
         left: 900px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_instagram img {
@@ -1076,14 +1006,10 @@ body,
         height: 32px;
     }
 
+
     #image_facebook {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 850px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_facebook img {
@@ -1104,24 +1030,9 @@ body,
         min-width: 530px;
     }
 
-    #zyro {
-        display: block;
-        top: 10px;
-        left: 670px;
-        width: 110px;
-        height: 24px;
-        min-height: 24px;
-        min-width: 110px;
-    }
-
     #image_twiter {
-        display: block;
-        top: 27px;
+        .icone_social;
         left: 950px;
-        width: 32px;
-        height: 32px;
-        min-height: 32px;
-        min-width: 32px;
     }
 
     #image_twiter img {
