J'ai l'impression que les media queries ne servent a rien git add *!

--- a/css/Accueil.less
+++ b/css/Accueil.less
@@ -35,15 +35,22 @@ body {
 
 .wb_sbg {
     background: transparent url("../gallery/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom;
-    min-height: 2461px;
+ /*   min-height: 2461px;
+    min-width: 992px;*/
+    min-height: 1471px;
     min-width: 992px;
 }
 
 
+
 .root {
-    width: 992px;
+            width: 992px;
+        height: 1471px;
+        overflow: visible;
+        
+/*    width: 992px;
     height: 2461px;
-    overflow: visible;
+    overflow: visible;*/
 }
 
 #div_menu {
@@ -531,20 +538,7 @@ body {
     min-width: 200px;
 }
 
-/*#div_instagram0 {
-    display: block;
-    z-index: 9000;
-    top: 643px;
-    left: 0;
-}
-
-#div_instagram1 {
-    display: block;
-    z-index: 9999;
-    top: 79px;
-    left: 0;
-}*/
-
+/*
 @media(min-width:768px) {
     #wb_header {
         height: 0px;
@@ -652,21 +646,6 @@ body {
         min-width: 270px;
     }
 
-    #div_bouton_LaRegionParisienne_carte {
-        display: block;
-        top: 400px;
-        left: 610px;
-        width: 110px;
-        height: 40px;
-        min-height: 40px;
-        min-width: 110px;
-
-        a {
-            width: 106px;
-            height: 36px;
-            padding: 8px 0 0 0;
-        }
-    }
 
     #div_ecriture_guidevoyage {
         display: block;
@@ -1018,23 +997,6 @@ body {
         min-width: 270px;
     }
 
-    #div_bouton_LaRegionParisienne_carte {
-        display: block;
-        top: 400px;
-        left: 610px;
-        width: 110px;
-        height: 40px;
-        min-height: 40px;
-        min-width: 110px;
-    
-
-
-        a {
-            width: 106px;
-            height: 36px;
-            padding: 8px 0 0 0;
-        }
-    }
 
     #div_ecriture_guidevoyage {
         display: block;
@@ -1387,21 +1349,6 @@ body {
         min-width: 270px;
     }
 
-    #div_bouton_LaRegionParisienne_carte {
-        display: block;
-        top: 400px;
-        left: 610px;
-        width: 110px;
-        height: 40px;
-        min-height: 40px;
-        min-width: 110px;
-    
-        a {
-            width: 106px;
-            height: 30px;
-            padding: 8px 0 0 0;
-        }
-    }
 
     #div_ecriture_guidevoyage {
         display: block;
@@ -1640,4 +1587,4 @@ body {
         min-height: 20px;
         min-width: 200px;
     }
-}
+}*/
