page evenement -> responsive

--- a/css/Evenements.less
+++ b/css/Evenements.less
@@ -26,13 +26,13 @@ body {
 
 body,
 .wb_sbg {
-    min-height: 3780px;
+    min-height: 1750px;
     min-width: 992px;
 }
 
 .root {
     width: 992px;
-    height: 3780px;
+    height: 1750px;
     overflow: visible;
 }
 
@@ -122,7 +122,7 @@ body,
     min-height: 84px;
     min-width: 300px;
 }
-.image {
+.image{
     position: static;
     top: 0;
     left: 0;
@@ -177,7 +177,7 @@ body,
     .image;
 }
 
-#image_fete_14juillet img{
+#image_fete_14juillet {
     display: block;
     z-index: 110;
     top: 750px;
@@ -192,8 +192,8 @@ body,
 
 #image_fete_14juillet img {
     position: static;
-    top: 0;
-    left: 0;
+    top: 750px;
+    left: 530px;
     width: 440px;
     height: 220px;
 }
@@ -383,18 +383,19 @@ body,
     }
 
     footer {
-        height: 77px;
+    height: 77px;
+    background: transparent none repeat scroll left top;
     }
 
     body,
     .wb_sbg {
-        min-height: 1791px;
+        min-height: 1000px;
         min-width: 992px;
     }
 
     .root {
         width: 992px;
-        height: 1791px;
+        height: 1750px;
         overflow: visible;
     }
 
@@ -472,7 +473,7 @@ body,
         .image;
     }
 
-    #image_fete_14juillet {
+    #image_fete_14juillet img {
         display: block;
         top: 750px;
         left: 530px;
@@ -645,6 +646,12 @@ body,
         min-height: 211px;
         min-width: 460px;
     }
+    .wb-stl-footer a {
+        font: 12px Georgia,serif;
+        text-align: left;
+        text-decoration: underline;
+        color: #15BFB6;
+    }
 }
 
 @media(min-width:992px) {
@@ -658,6 +665,7 @@ body,
 
     footer {
         height: 77px;
+        background: transparent none repeat scroll left top;
     }
 
     body,
@@ -668,7 +676,7 @@ body,
 
     .root {
         width: 992px;
-        height: 1791px;
+        height: 1750px;
         overflow: visible;
     }
 
@@ -939,7 +947,7 @@ body,
     }
 
     #principal {
-        height: 1394px;
+        
     }
 
     footer {
@@ -954,7 +962,7 @@ body,
 
     .root {
         width: 992px;
-        height: 1791px;
+        height: 1750px;
         overflow: visible;
     }
 
