--- a/css/Evenements.less
+++ b/css/Evenements.less
@@ -1,3 +1,6 @@
+@leftInstagram: 900px;
+@leftFacebook: 850px;
+@leftTwitter: 950px;
 header {
     height: 250px;
     background: transparent none repeat scroll left top;
@@ -11,8 +14,8 @@ header {
 }
 
 
-footer {
-    height: 77px;
+#wb_footer {
+    height: 78px;
     background: transparent none repeat scroll left top;
 }
 
@@ -26,13 +29,13 @@ body {
 
 body,
 .wb_sbg {
-    min-height: 1750px;
+    min-height: 1790px;
     min-width: 992px;
 }
 
 .root {
     width: 992px;
-    height: 1750px;
+    height: 1471px;
     overflow: visible;
 }
 
@@ -175,6 +178,46 @@ body,
 
 #image_twiter  {
     .image;
+}
+
+.icone_social(@leftSocial) {
+    display: block;
+    left: @leftSocial;
+    top: 27px;
+    width: 32px;
+    height: 32px;
+    min-height: 32px;
+    min-width: 32px;
+}
+
+
+
+#div_instagram {
+    z-index: 183;
+   .icone_social(@leftInstagram);
+}
+
+
+#div_facebook {
+    z-index: 180;
+    .icone_social(@leftFacebook);
+}
+
+#div_twitter {
+    z-index: 181;
+    .icone_social(@leftTwitter);
+}
+
+
+#div_ecriture_nombasdepage {
+    display: block;
+    z-index: 182;
+    top: 10px;
+    left: 50px;
+    width: 530px;
+    height: 30px;
+    min-height: 30px;
+    min-width: 530px;
 }
 
 #image_fete_14juillet {
@@ -382,20 +425,19 @@ body,
         height: 1394px;
     }
 
-    footer {
-    height: 77px;
-    background: transparent none repeat scroll left top;
+    #wb_footer {
+        height: 78px;
     }
 
     body,
     .wb_sbg {
-        min-height: 1000px;
+        min-height: 1790px;
         min-width: 992px;
     }
 
     .root {
-        width: 992px;
-        height: 1750px;
+       width: 992px;
+        height: 1471px;
         overflow: visible;
     }
 
@@ -663,9 +705,8 @@ body,
         height: 1394px;
     }
 
-    footer {
-        height: 77px;
-        background: transparent none repeat scroll left top;
+    #wb_footer {
+        height: 78px;
     }
 
     body,
@@ -675,8 +716,8 @@ body,
     }
 
     .root {
-        width: 992px;
-        height: 1750px;
+       width: 992px;
+        height: 1471px;
         overflow: visible;
     }
 
@@ -950,8 +991,8 @@ body,
         
     }
 
-    footer {
-        height: 77px;
+   #wb_footer {
+        height: 78px;
     }
 
     body,
@@ -961,8 +1002,8 @@ body,
     }
 
     .root {
-        width: 992px;
-        height: 1750px;
+      width: 992px;
+        height: 1471px;
         overflow: visible;
     }
 
