modif less a visiter

--- a/css/A_Visiter.less
+++ b/css/A_Visiter.less
@@ -228,20 +228,21 @@ body,
 }
 
 #wb_element_instance41 {
-    display: block;
-    z-index: 116;
-    top: 720px;
+   display: block;
+
+    top: 70px;
     left: 560px;
-    width: 410px;
-    height: 280px;
-    min-height: 280px;
-    min-width: 410px;
+    width: 27px;
+    height: 24px;
+    min-height: 24px;
+    min-width: 270px;
+  
 }
 
 #wb_element_instance41 img {
     position: static;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 200px;
     width: 410px;
     height: 280px;
 }
